--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,6 @@
 {
-  "cleanUrls": true
+  "cleanUrls": true,
+  "redirects": [
+    { "source": "/admin", "destination": "/", "permanent": true }
+  ]
 }
