--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
 {
   "cleanUrls": true,
   "redirects": [
-    { "source": "/admin", "destination": "/", "permanent": true }
+    { "source": "/admin", "destination": "/", "permanent": true },
+    { "source": "/git", "destination": "https://github.com/naomasamanz/naoma-site/edit", "permanent": false },
+    { "source": "/test", "destination": "/", "permanent": false }
   ]
 }
