--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,7 @@
   "redirects": [
     { "source": "/admin", "destination": "/", "permanent": true },
     { "source": "/git", "destination": "https://github.com/naomasamanz/naoma-site", "permanent": false },
-    { "source": "/test", "destination": "/", "permanent": false }
+    { "source": "/test", "destination": "/", "permanent": false },
+    { "source": "/black-box", "destination": "/403", "permanent": false }
   ]
 }
