--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,6 @@
     { "source": "/admin", "destination": "/", "permanent": true },
     { "source": "/git", "destination": "https://github.com/naomasamanz/naoma-site", "permanent": false },
     { "source": "/test", "destination": "/", "permanent": false },
-    { "source": "/black-box", "destination": "/403", "permanent": false }
+    { "source": "/naoma", "destination": "/403", "permanent": false }
   ]
 }
