--- a/vercel.json
+++ b/vercel.json
@@ -4,12 +4,21 @@
     { "source": "/admin", "destination": "/", "permanent": true },
     { "source": "/git", "destination": "https://github.com/naomasamanz/naoma-site", "permanent": false },
     { "source": "/test", "destination": "/", "permanent": false },
-    { "source": "/naoma", "destination": "/403", "permanent": false }
+    { "source": "/naoma", "destination": "/403", "permanent": false },
+    
+    /* 城主のこだわり：クエリパラメータへの転移術 */
+    { 
+      "source": "/en/:path*", 
+      "destination": "/:path*?lang=en", 
+      "permanent": false 
+    }
+  ],
+  "headers": [
+    {
+      "source": "/(.*).(jpg|png|gif|ico|css|js)",
+      "headers": [
+        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
+      ]
+    }
   ]
-}
-{
-  "i18n": {
-    "locales": ["ja", "en"],
-    "defaultLocale": "ja"
-  }
 }
