--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,7 @@
     { "source": "/admin", "destination": "/", "permanent": true },
     { "source": "/git", "destination": "https://github.com/naomasamanz/naoma-site", "permanent": false },
     { "source": "/test", "destination": "/", "permanent": false },
+    { "source": "/login", "destination": "https://www.google.com", "permanent": false },
     { "source": "/naoma", "destination": "/403", "permanent": false }
   ]
 }
